--- a/public/acceuil.html
+++ b/public/acceuil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DATABASE ITIC PROJECT</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
@@ -30,10 +31,8 @@
                     <tr>
                         <th>Numero de mision</th>
                         <th>titre</th>
-                        <th>description</th>
-                        
+                        <th>description</th>  
                     </tr>
-                    
                 </thead>
             </table>
         </section>
