new icon for a page and modif login

--- a/public/login.html
+++ b/public/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../favicon/base-de-donnees.png">
     <title>DATABASE ITIC PROJECT</title>
 </head>
 <body>
@@ -15,10 +17,10 @@
         <fieldset>
             <legend>Connexion</legend>
             <form method="post" action="traitement_base_de_données">
-                <label for="lastname">lastname:</label>
-                <input type="text" id="lastname" name="lastname" required>    
                 <label for="firstname">firstname:</label>
                 <input type="text" id="firstname" name="firstname" required>    
+                <label for="lastname">lastname:</label>
+                <input type="text" id="lastname" name="lastname" required>    
                 <label for="Birthdate">Birthdate:</label>
                 <input type="date" id="Birthdate" name="date" required>    
                 <label for="Email">Email:</label>
