--- a/public/acceuil.html
+++ b/public/acceuil.html
@@ -11,6 +11,13 @@
         <h1>
             DATABASE ITIC PARIS
         </h1>
+        <nav>
+            <ul>
+                <li><a href="acceuil.html">Acceuil</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="sign.html">Sign up</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="acceuil">
