--- a/public/sign.html
+++ b/public/sign.html
@@ -22,8 +22,14 @@
     </header>
     <main>
         <fieldset>
-            <legend>Connexion</legend>
-            <form method="post" action="traitement_base_de_données">   
+            <legend>Inscription</legend>
+            <form method="post" action="traitement_base_de_données">
+                <label for="firstname">firstname:</label>
+                <input type="text" id="firstname" name="firstname" required>    
+                <label for="lastname">lastname:</label>
+                <input type="text" id="lastname" name="lastname" required>    
+                <label for="Birthdate">Birthdate:</label>
+                <input type="date" id="Birthdate" name="date" required>    
                 <label for="Email">Email:</label>
                 <input type="email" id="Email" name="Email" required>   
                 <label for="password">Password :</label> 
