--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <h1>DATABASE ITIC PARIS</h1>
       <nav>
         <ul>
-          <li><a href="acceuil.html">Acceuil</a></li>
+          <li><a href="index.html">Acceuil</a></li>
           <li><a href="login.html">Login</a></li>
           <li><a href="sign.html">Sign up</a></li>
         </ul>
@@ -30,12 +30,15 @@
         <table>
           <thead>
             <tr>
-              <th>Numero de mision</th>
-              <th>titre</th>
+              <th>Numero</th>
+              <th>titre de la mission</th>
               <th>description</th>
             </tr>
           </thead>
         </table>
+      </section>
+      <section class="deconnex">
+        <a href="logout.html">Se deconnecter</a>
       </section>
     </main>
   </body>
