--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
         </h1>
         <nav>
             <ul>
-                <li><a href="acceuil.html">Acceuil</a></li>
+                <li><a href="index.html">Acceuil</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="sign.html">Sign up</a></li>
             </ul>
@@ -26,7 +26,7 @@
             <legend>Connexion</legend>
             <form method="post" action="traitement_base_de_données">   
                 <label for="Email">Email:</label>
-                <input type="email" id="Email" name="Email" required>   
+                <input type="email" id="Email" name="Email" required>  <br> 
                 <label for="password">Password :</label> 
                 <input type="password" id="password" name="password" required>
             </form>
