--- a/public/sign.html
+++ b/public/sign.html
@@ -14,7 +14,7 @@
         </h1>
         <nav>
             <ul>
-                <li><a href="acceuil.html">Acceuil</a></li>
+                <li><a href="index.html">Acceuil</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="sign.html">Sign up</a></li>
             </ul>
@@ -26,13 +26,13 @@
             <legend>Inscription</legend>
             <form method="post" action="traitement_base_de_données">
                 <label for="firstname">firstname:</label>
-                <input type="text" id="firstname" name="firstname" required>    
+                <input type="text" id="firstname" name="firstname" required>    <br>
                 <label for="lastname">lastname:</label>
-                <input type="text" id="lastname" name="lastname" required>    
+                <input type="text" id="lastname" name="lastname" required>    <br>
                 <label for="Birthdate">Birthdate:</label>
-                <input type="date" id="Birthdate" name="date" required>    
+                <input type="date" id="Birthdate" name="date" required>    <br>
                 <label for="Email">Email:</label>
-                <input type="email" id="Email" name="Email" required>   
+                <input type="email" id="Email" name="Email" required>   <br>
                 <label for="password">Password :</label> 
                 <input type="password" id="password" name="password" required>
             </form>
