peaufination des form et embellisement du site

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,33 @@
               <th>description</th>
             </tr>
           </thead>
+          <tbody>
+            <tr>
+                <td>1</td>
+                <td>Réparer le robot</td>
+                <td>Le bras du robot est endommagé, il faut le remplacer.</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Explorer la nouvelle planète</td>
+                <td>Une nouvelle planète a été découverte, il faut l'explorer et en rapporter des échantillons.</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Développer un nouveau logiciel</td>
+                <td>Créer un logiciel de reconnaissance d'image pour identifier les espèces extraterrestres.</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Réparer la navette spatiale</td>
+                <td>Le système de propulsion de la navette est défaillant, il faut le réparer.</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Communiquer avec les extraterrestres</td>
+                <td>Essayer de communiquer avec les extraterrestres récemment découverts.</td>
+            </tr>
+        </tbody>
         </table>
       </section>
       <section class="deconnex">
