--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <header>
       <h1>DATABASE ITIC PARIS</h1>
       <nav>
-        <ul>
-          <li><a href="index.html">Acceuil</a></li>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="sign.html">Sign up</a></li>
-        </ul>
-      </nav>
+            
+        <a href="index.html">Accueil</a>
+        <a href="login.html">Login</a>
+        <a href="sign.html">Sign up</a>
+    
+</nav>
     </header>
     <main>
       <section class="acceuil">
