--- a/public/login.html
+++ b/public/login.html
@@ -13,12 +13,12 @@
             DATABASE ITIC PARIS
         </h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Acceuil</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="sign.html">Sign up</a></li>
-            </ul>
-        </nav>
+            
+            <a href="index.html">Accueil</a>
+            <a href="login.html">Login</a>
+            <a href="sign.html">Sign up</a>
+        
+    </nav>
     </header>
     <main>
         <h2>Bienvenue sur la base de données ITIC PARIS</h2>
